examples/errors/global_assert_fail.lx
namespace Main002;

int32 main() {
    assert(false);
    ret 0;
}
